For more information, check the README.md in http://github.com/i3visio/osrframework

v0.6.0, 2015/01/14 -- Creation of Phonefy architecture.
- Added a Google Search wrapper based on Mario Vilas approach.
[TO-DO] - Added Maltego transform: phoneToDetails.py
- Added Maltego transform: textToGoogleSearchURI.py
- Added Maltego transform: uriToProtocol.py
- Added Maltego transform: uriToPort.py
- Added Maltego transform: uriToDomain.py
- Added Maltego transform: domainToTLD.py
- Added tld, fullname and location.address entities.

v0.5.0, 2015/01/13 -- Creation of Phonefy architecture.
- Added Maltego transform: phoneToMoreInfoListspam.py
- Restructuration of phonefy package.
- Change in uriToEntities.py to use an i3visio Browser.
- Fix in i3visio.location.province icon.

v0.4.0, 2015/01/11 -- Added the usufy package onto OSRFramework.
- Added Maltego transform: aliasToAllProfiles.py
- Added Maltego transform: aliasToFamousProfiles.py
- Inclusion of i3visiotools global files as osrframework.utils.
- Change in old displaying format of usufy entities.
- Change inheritance of i3visio.uri to i3visio.text (rather than i3visio.object).
- Change icon of i3visio.platform.

v0.3.0, 2015/01/11 -- Added the extraction of regular expression with entify.
- Added Maltego transform: textToAllEntities.py
- Added Maltego transform: uriToAllEntities.py
- Added Maltego transform: emailToAlias.py
- Added Maltego transform: emailToDomain.py
- Inclusion of a --quiet option.
- Inclusion of transforms related to the extraction of entities.
- Minor changes in the name of entify transforms and i3visio.url has been moved to i3visio.uri.
- Changed the url.py module to uri.py. References changed everywhere.
- Added a simple transformation of foo[at]bar[dot]com mails to be foo@bar.com.
- Fix on i3visio.object entity which was not being imported correctly.
- Edit configuration of configure_maltego to update also default paths for the transforms.

v0.2.0, 2015/01/07 -- Added Maltego transforms.