@@ -2,13 +2,14 @@ For more information, check the README.md in http://github.com/i3visio/osrframew
 
 v0.6.0, 2015/01/14 -- Creation of Phonefy architecture.
 - Added a Google Search wrapper based on Mario Vilas approach.
-[TO-DO] - Added Maltego transform: phoneToDetails.py
+- Added Maltego transform: phoneToDetails.py
 - Added Maltego transform: textToGoogleSearchURI.py
 - Added Maltego transform: uriToProtocol.py
 - Added Maltego transform: uriToPort.py
 - Added Maltego transform: uriToDomain.py
 - Added Maltego transform: domainToTLD.py
-- Added tld, fullname and location.address entities.
+[TO-DO] person, name, surname, location.postalcode
+- Added tld, person, fullname, name, surname, location.postalcode and location.address entities.
 
 v0.5.0, 2015/01/13 -- Creation of Phonefy architecture.
 - Added Maltego transform: phoneToMoreInfoListspam.py
